Remove cards centering, fix scrollbar offset

--- a/web_viewer/main.css
+++ b/web_viewer/main.css
@@ -1,3 +1,9 @@
+/* https://stackoverflow.com/a/39289453 */
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
 .border-dashed {
     border-style: dashed !important;
 }
